Fixing sponsors lists on mobile

--- a/Campsite2017-styles/style.css
+++ b/Campsite2017-styles/style.css
@@ -4053,28 +4053,33 @@ h6 + .notation {
     flex: 0 1 100%; }
     @media (min-width: 480px) {
       .amigos-list.patrocinadores .amigo {
-        flex: 0 1 50%; } }
-    @media (min-width: 768px) {
+        flex: 0 1 48%;
+        margin: 0 1% 1rem; } }
+    @media (min-width: 769px) {
       .amigos-list.patrocinadores .amigo {
         flex: 0 1 33.333%; } }
   .amigos-list.colaboradores .amigo {
     flex: 0 1 80%; }
     @media (min-width: 480px) {
       .amigos-list.colaboradores .amigo {
-        flex: 0 1 50%; } }
-    @media (min-width: 768px) {
+        flex: 0 1 40%;
+        margin: 0 auto 1rem; } }
+    @media (min-width: 769px) {
       .amigos-list.colaboradores .amigo {
         flex: 0 1 25%; } }
   .amigos-list.mediapartners {
     margin-bottom: 0; }
     .amigos-list.mediapartners .amigo {
-      flex: 0 1 60%; }
+      flex: 0 1 60%;
+      margin: 0 0 1rem; }
       @media (min-width: 480px) {
         .amigos-list.mediapartners .amigo {
-          flex: 0 1 50%; } }
-      @media (min-width: 768px) {
+          flex: 0 1 36%;
+          margin: 0 auto 1rem; } }
+      @media (min-width: 769px) {
         .amigos-list.mediapartners .amigo {
-          flex: 0 1 18%; } }
+          flex: 0 1 24%;
+          margin: 0 1% 1rem; } }
 /*_______ Amigos list _______*/
 .home-sponsors {
   background-color: #F5F1C7;
@@ -4621,8 +4626,3 @@ div[class^="wcorg-sponsor-level-"] {
   .error404 .page-content .widget.widget_recent_entries {
     float: none;
     width: 100%; }
-    .error404 .page-content .widget.widget_recent_entries li a {
-      font-weight: 800;
-      font-size: 1.5rem; }
-  .error404 .page-content .widget.widget_categories, .error404 .page-content .widget.widget_archive {
-    display: none; }
